--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "moment-holiday",
-  "version": "1.5.1",
+  "version": "1.5.2",
   "description": "A Moment.js plugin for handling holidays.",
   "keywords": [
     "moment",
@@ -34,7 +34,7 @@
   },
   "homepage": "https://github.com/kodie/moment-holiday",
   "license": "MIT",
-  "main": "./moment-holiday.js",
+  "main": "moment-holiday.js",
   "files": [
     "./",
     "build/",
