Apply changes to min files (NOTE I didn't actually build so the map files are not fixed)

--- a/package.json
+++ b/package.json
@@ -34,9 +34,8 @@
   },
   "homepage": "https://github.com/kodie/moment-holiday",
   "license": "MIT",
-  "main": "moment-holiday.js",
+  "main": "./build/moment-holiday-us.min.js",
   "files": [
-    "./",
     "build/",
     "locale/"
   ],
